@@ -16,10 +16,11 @@ INSTL_STEP_6_LABEL="6 : Configuration"
 INSTL_STEP_7_LABEL="7 : Fin"
 
 ;Language view
-INSTL_SELECT_LANGUAGE_TITLE="Sélectionnez la langue de l'interface d'installation"
-INSTL_SELECT_LANGUAGE_DESC="Veuillez sélectionner la langue à utiliser au cours de l'installation de Joomla!"
 INSTL_LANGUAGE_TITLE="Choix de la langue"
+INSTL_SELECT_LANGUAGE_DESC="Veuillez sélectionner la langue à utiliser au cours de l'installation de Joomla!"
+INSTL_SELECT_LANGUAGE_TITLE="Sélectionnez la langue de l'interface d'installation"
 INSTL_WARNJAVASCRIPT="Attention ! JavaScript doit être activé dans le navigateur pour une installation correcte de Joomla!"
+INSTL_WARNJSON="JSON doit être activé dans votre installation de PHP pour pouvoir installer Joomla!"
 
 ;Preinstall view
 INSTL_PRECHECK_TITLE="Pré-installation"
@@ -161,22 +162,23 @@ INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Impossible de détecter automatiquement le 
 ;others
 INSTL_ADVANCED_SETTINGS="Paramètres avancés"
 INSTL_BASIC_SETTINGS="Paramètres de base"
-INSTL_COMPLETE_REMOVE_FOLDER="Supprimer le dossier d'installation"
-INSTL_COMPLETE_FOLDER_REMOVED="Le dossier d'installation a été supprimé"
 INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Le dossier d'installation a déjà été supprimé."
 INSTL_COMPLETE_ERROR_FOLDER_DELETE="Le dossier d'installation n'a pas pu être supprimé. Veuillez le supprimer manuellement."
+INSTL_COMPLETE_FOLDER_REMOVED="Le dossier d'installation a été supprimé"
+INSTL_COMPLETE_REMOVE_FOLDER="Supprimer le dossier d'installation"
 INSTL_CONFPROBLEM="Votre fichier ou dossier de configuration n'est pas modifiable, ou bien il y a eu un problème durant la création du fichier de configuration. Vous allez devoir transférer le code suivant manuellement. Cliquez dans la zone de texte pour sélectionner tout le code, copiez/collez le dans un nouveau fichier ayant pour nom configuration.php et transférez ce dernier à la racine de votre site."
+INSTL_DATABASE_SUPPORT="Bases de données supportées :"
 INSTL_DISPLAY_ERRORS="Afficher les erreurs"
 INSTL_ERROR_DB="Des erreurs sont survenues lors du remplissage la base de données: %s"
 INSTL_FILE_UPLOADS="Transfert de fichiers"
 INSTL_GNU_GPL_LICENSE="Licence Publique Générale GNU (<a href='http://www.gnu.org/licenses/licenses.fr.html' target='_blank'>consulter la présentation en français...</a>)"
 INSTL_INSTALLATION="Installation"
-INSTL_LICENSE="Licence"
 INSTL_JSON_SUPPORT_AVAILABLE="Support JSON"
+INSTL_LICENSE="Licence"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC"
 INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
 INSTL_MB_LANGUAGE_IS_DEFAULT="Directive Mbstring langage par défaut"
 INSTL_MB_STRING_OVERLOAD_OFF="Directive Mbstring overload désactivée"
-INSTL_MYSQL_SUPPORT="Support de MySQL"
 INSTL_NOTICEMBLANGNOTDEFAULT="La directive PHP mbstring language n'est pas paramétrée à 'neutral'. Cela peut être fait en rajoutant <strong>php_value mbstring.language neutral</strong> dans le fichier <code>.htaccess</code>."
 INSTL_NOTICEMBSTRINGOVERLOAD="La directive PHP mbstring overload est activée. Vous pouvez la désactiver en ajoutant <strong>php_value mbstring.func_overload 0</strong> dans le fichier .<code>.htaccess</code>."
 INSTL_NOTICEYOUCANSTILLINSTALL="<br />Vous pouvez continuer l'installation car les paramètres de configuration seront affichés à la fin.  Vous allez devoir transférer le code suivant manuellement. Cliquez dans la zone de texte pour sélectionner tout le code, copiez/collez le dans un nouveau fichier ayant pour nom configuration.php et transférez ce dernier à la racine de votre site."
@@ -188,8 +190,8 @@ INSTL_SAFE_MODE="Safe Mode"
 INSTL_SESSION_AUTO_START="Session Auto Start"
 INSTL_WRITABLE="Modifiable"
 INSTL_XML_SUPPORT="Support de XML"
-INSTL_ZLIB_COMPRESSION_SUPPORT="Support de la compression zlib"
 INSTL_ZIP_SUPPORT_AVAILABLE="Support ZIP natif"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Support de la compression zlib"
 
 ;Global strings
 JADMINISTRATOR="Administration"
